@@ -1,6 +1,6 @@
 package br.edu.atitus.currency_service.clients;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.stereotype.Component;
 
@@ -9,9 +9,11 @@ public class CurrencyBCFallback implements CurrencyBCClient{
 
 	@Override
 	public CurrencyBCResponse getCurrencyBC(String moeda) {
-		CurrencyBCResponse currency = new CurrencyBCResponse();
-		currency.setValue(Collections.emptyList());
-		return currency;
+	    CurrencyBCResponse currency = new CurrencyBCResponse();
+	    CurrencyBCResponse.values fallbackValue = new CurrencyBCResponse.values();
+	    fallbackValue.setCotacaoVenda(-1.0);
+	    currency.setValue(List.of(fallbackValue));
+	    return currency;
 	}
 
 }
